unpackaged/main/default/objects/Credit_Review_Controller__c/Credit_Review_Controller__c.object-meta.xml
<CustomObject>
    <label>Credit Review Controller</label>
    <nameField>
        <displayFormat>CRC-{0000000}</displayFormat>
        <label>Credit Review Controller Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Review Controllers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>