unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Analyst_Duration__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Duration__c</fullName>
    <formula>Time_from_Assignment_to_Decision__c * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analyst Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>