unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Credit_Review__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Review</label>
    <referenceTo>Credit_Review__c</referenceTo>
    <relationshipLabel>Credit Review Controllers</relationshipLabel>
    <relationshipName>Credit_Review_Controllers</relationshipName>
    <type>Lookup</type>
</CustomField>