unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Credit_Review_Id__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review_Id__c</fullName>
    <formula>CASESAFEID(Credit_Review__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Review Id</label>
    <type>Text</type>
</CustomField>