unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Credit_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review_Status__c</fullName>
    <formula>TEXT(Credit_Review__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Review Status</label>
    <type>Text</type>
</CustomField>