unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Step__c</fullName>
    <formula>CASE( Step_Number__c,
1, Step_1__c,
2, Step_2__c,
3, Step_3__c,
4, Step_4__c,
5, Step_5__c,
6, Step_6__c,
7, Step_7__c,
8, Step_8__c,
9, Step_9__c,
10, Step_10__c,
11, Step_11__c,
12, Step_12__c,
13, Step_13__c,
14, Step_14__c,
15, Step_15__c,
16, Step_16__c,
'None'
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Step</label>
    <type>Text</type>
</CustomField>