unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Decision_Time__c.field-meta.xml
<CustomField>
    <fullName>Decision_Time__c</fullName>
    <formula>IF(
NOT(ISBLANK(Credit_Review__r.Opportunity__r.NF_Decline_Date__c)),
Credit_Review__r.Opportunity__r.NF_Decline_Date__c,

IF(
AND(
ISBLANK(Credit_Review__r.Opportunity__r.NF_Decline_Date__c),
NOT(ISBLANK(Credit_Review__r.Opportunity__r.APPROVAL_DATE__c)),
CONTAINS(  Credit_Review__r.Opportunity__r.Lender_Account__r.Name , 'National Funding')),
Credit_Review__r.Opportunity__r.APPROVAL_DATE__c,

IF(
NOT(ISBLANK(Credit_Review__r.Opportunity__r.Declined_Date__c )),
Credit_Review__r.Opportunity__r.Declined_Date__c ,

IF(
NOT(ISBLANK(Credit_Review__r.Opportunity__r.Lender_Pend_Info_Date__c)),
Credit_Review__r.Opportunity__r.Lender_Pend_Info_Date__c,
null
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Time</label>
    <type>DateTime</type>
</CustomField>