unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Decline_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reasons__c</fullName>
    <label>Decline Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>