unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Duration_eNoah_to_Analyst_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Duration_eNoah_to_Analyst_Assignment__c</fullName>
    <description>This may be deprecated due to new Pre Processing step</description>
    <formula>IF(
NOT(ISBLANK(Step_7_Status__c)),
Step_7_Finish_Time__c -  Step_4_Finish_Time__c,
IF(
NOT(ISBLANK(Step_6_Status__c)),
Step_6_Finish_Time__c -  Step_4_Finish_Time__c,
IF(
NOT(ISBLANK(Step_5_Status__c)),
Step_5_Finish_Time__c -  Step_4_Finish_Time__c,
null
)))</formula>
    <label>Duration eNoah to Analyst Assignment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>