unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Final_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Final_Outcome__c</fullName>
    <description>** Update this with Step 12/13 -- add if Step Type = Flow Alia 12/29/20 **</description>
    <formula>IF(
OR(
Step_1_Status__c = 'Stop',
Step_2_Status__c = 'Stop',
Step_3_Status__c = 'Stop',
Step_4_Status__c = 'Stop',
Step_5_Status__c = 'Stop',
Step_6_Status__c = 'Stop',
Step_7_Status__c = 'Stop',
Step_8_Status__c = 'Stop',
Step_9_Status__c = 'Stop',
Step_10_Status__c = 'Stop',
Step_11_Status__c = 'Stop',
Step_12_Status__c = 'Stop',
Step_13_Status__c = 'Stop',
Step_14_Status__c = 'Stop',
Step_15_Status__c = 'Stop',
Step_16_Status__c = 'Stop'
),

'Auto Declined',
'Continue'
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Outcome</label>
    <type>Text</type>
</CustomField>