unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time__c</fullName>
    <formula>IF (
 Step_1__c = 'ManualPreProcessing',
 Step_5_Finish_Time__c -  Step_1_Start_Time__c,

IF( 

 Step_2__c = 'ManualPreProcessing',
 Step_5_Finish_Time__c -  Step_2_Start_Time__c,

null

) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>