unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Step_10__c.field-meta.xml
<CustomField>
    <fullName>Step_10__c</fullName>
    <label>Step 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>