unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Step_11_Status__c.field-meta.xml
<CustomField>
    <fullName>Step_11_Status__c</fullName>
    <label>Step 11 Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>