unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Step_12__c.field-meta.xml
<CustomField>
    <fullName>Step_12__c</fullName>
    <label>Step 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>