unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Step_12_Exit_Path__c.field-meta.xml
<CustomField>
    <fullName>Step_12_Exit_Path__c</fullName>
    <label>Step 12 Exit Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>