unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Step_13__c.field-meta.xml
<CustomField>
    <fullName>Step_13__c</fullName>
    <label>Step 13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>