unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Step_13_Type__c.field-meta.xml
<CustomField>
    <fullName>Step_13_Type__c</fullName>
    <label>Step 13 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRC_Step_Type</valueSetName>
    </valueSet>
</CustomField>