unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Step_14_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Step_14_Start_Time__c</fullName>
    <label>Step 14 Start Time</label>
    <type>DateTime</type>
</CustomField>