unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Time_from_Assignment_to_Decision__c.field-meta.xml
<CustomField>
    <fullName>Time_from_Assignment_to_Decision__c</fullName>
    <formula>IF(
Step_8__c = 'AnalystAssignment',
Decision_Time__c - Step_8_Finish_Time__c,
IF(
Step_10__c = 'AnalystAssignment',
Decision_Time__c - Step_10_Finish_Time__c,
0
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time from Assignment to Decision</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>