unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Time_Since_Submission__c.field-meta.xml
<CustomField>
    <fullName>Time_Since_Submission__c</fullName>
    <formula>IF( 
 NOW() - CreatedDate &gt; 0 , 
TEXT( FLOOR( NOW() - CreatedDate  ) ) &amp; " days " 
&amp; TEXT( FLOOR( MOD( (NOW() - CreatedDate  ) * 24, 24 ) ) ) &amp; " hours " 
&amp; TEXT( ROUND( MOD( (NOW() - CreatedDate  ) * 24 * 60, 60 ), 0 ) ) &amp; " minutes", 
"" 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Submission</label>
    <type>Text</type>
</CustomField>