unpackaged/main/default/objects/Credit_Review_Controller__c/fields/Time_to_eNoah_Complete__c.field-meta.xml
<CustomField>
    <fullName>Time_to_eNoah_Complete__c</fullName>
    <formula>IF( 
Credit_Review__r.Opportunity__r.eNoah_Complete_Date__c - Credit_Review__r.Opportunity__r.PreQual_Date__c &gt; 0 , 
TEXT( FLOOR( Credit_Review__r.Opportunity__r.eNoah_Complete_Date__c - Credit_Review__r.Opportunity__r.PreQual_Date__c ) ) &amp; " days " 
&amp; TEXT( FLOOR( MOD( (Credit_Review__r.Opportunity__r.eNoah_Complete_Date__c - Credit_Review__r.Opportunity__r.PreQual_Date__c ) * 24, 24 ) ) ) &amp; " hours " 
&amp; TEXT( ROUND( MOD( (Credit_Review__r.Opportunity__r.eNoah_Complete_Date__c - Credit_Review__r.Opportunity__r.PreQual_Date__c ) * 24 * 60, 60 ), 0 ) ) &amp; " minutes", 
"" 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to eNoah Complete</label>
    <type>Text</type>
</CustomField>